Update 'euhg5l38w-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:3804af2fd54203557682c8070428c218fbfedde3@sha256:974b2bab769bc9abc07c371f121c572be6ccdb8e5eadd32ccc5f7461f8e108c5

--- a/components/euhg5l38w-go/overlays/development/deployment-patch.yaml
+++ b/components/euhg5l38w-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: euhg5l38w-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:3804af2fd54203557682c8070428c218fbfedde3@sha256:974b2bab769bc9abc07c371f121c572be6ccdb8e5eadd32ccc5f7461f8e108c5
+          name: container-image
